--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,12 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<div><h3>　ジャンル編集</h3></div>
+<div>
+  <%= form_with model: @genre, url: admin_genre_path(@genre.id), method: :patch do |f| %>
+  <table>
+    <tr>
+      <td><h4>ジャンル名</h4></td>
+      <td><%= f.text_field :name %></td>
+      <td><%= f.submit '変更を保存' %></td>
+    </tr>
+  </table>
+  <% end %>
+</div>
