--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<h1>ジャンル一覧</h1>
+<%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
+  <div>
+    <table>
+      <tr>
+        <th><h4>ジャンル名</h4></th>
+        <td><%= f.text_field :name, placeholder: "新しいジャンル" %></td>
+        <td><%= f.submit '新規登録' %></td>
+      </tr>
+    </table>
+  </div>
+<% end %>
+<div>
+  <table>
+    <tr>
+      <th></th>
+    </tr>
+    <% @genres.each do |genre| %>
+    <tr>
+      <td><h4><%= genre.name %></h4></td>
+      <td><%= link_to '編集する', edit_admin_genre_path(genre.id) %></td>
+      <td>「削除」も必要になるかも？</td>
+    <% end %>
+    </tr>
+
+  </table>
