--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Public::Users#index</h1>
-<p>Find me in app/views/public/users/index.html.erb</p>
+<h1>会員一覧</h1>
+<% @users.each do |user| %>
+<table>
+  <tr>
+    <td>サムネ画像</td>
+    <td>
+      <%= link_to user_path(user.id) do %>
+        <%= user.nickname %>
+      <%end%>
+    </td>
+    <td>自己紹介文</td>
+  </tr>
+</table>
+<%end%>
