--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,2 +1,31 @@
-<h1>Public::Users#show</h1>
-<p>Find me in app/views/public/users/show.html.erb</p>
+<h1>会員情報詳細</h1>
+<h3>左３か４使ってテンプレ表示</h3>
+
+<table>
+  <tr>
+    <td>サムネ画像</td>
+  </tr>
+  <tr><td>
+    <%= link_to user_path(@user.id) do %>
+      <%= @user.nickname %>
+    <%end%>
+  </td></tr>
+  <tr>
+    <td>自己紹介文</td>
+  </tr>
+  <tr>
+    <td>更新ボタン</td>
+  </tr>
+</table>
+<% @posts.each do |post| %>
+  <table>
+    <tr>
+      <td>
+        <%= link_to post_path(post.id) do %>
+          <%= post.title %>
+        <%end%>
+      </td>
+      <td>♥いいね♥</td>
+    </tr>
+  </table>
+<%end%>
