[Update]会員一覧/詳細

--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -24,6 +24,7 @@
     <td>投稿者：<%= post.user.nickname %></td>
   </tr>
   <tr>
+    <td><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %></td>
     <td></td>
     <td></td>
   </tr>
