--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <%#= user_signed_in? %>
       <% if user_signed_in? %>
         ようこそ、<%= current_user.nickname %>さん！会員ページにログイン中
+        <%= link_to "マイページ", user_path(current_user.id) %>
         <%= link_to "投稿一覧", posts_path %>
         <%= link_to "会員一覧", users_path %>
         <%= link_to "新規投稿", new_post_path %>
