--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Admin::Posts#show</h1>
-<p>Find me in app/views/admin/posts/show.html.erb</p>
+<h1>投稿詳細</h1>
+<h3>左３か４使ってテンプレ表示</h3>
+<div><%= @post.created_at.strftime('%Y/%m/%d  %H:%M') %></div>
+<div>
+  <% if @post.post_images.attached? %>
+    <% @post.post_images.each do |image| %>
+      <%= image_tag image.variant(resize_to_limit:[200,200]).processed %>
+    <% end %>
+  <% else %>
+    <%= image_tag 'no_image.jpg' %>
+  <% end %>
+</div>
+<div>
+  タイトル:<%= @post.title %>
+</div>
+<div>
+  本文:<%= @post.body %>
+</div>
+<div>～以下コメント欄～</div>
