--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,10 @@
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
 
       <% elsif admin_signed_in? %>
+        (´･ω･`)
         <%= link_to "投稿一覧", admin_root_path %>
         <%= link_to "会員一覧", admin_users_path %>
-        <%= link_to "投稿画像一覧", admin_post_images_path %>
+        <%#= link_to "投稿画像一覧", admin_post_images_path %>
         <%= link_to "ジャンル一覧", admin_genres_path %>
         <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
       <% else %>
