[Add]会員の退会画面・機能を一部作成

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,7 +1,12 @@
-<h2>会員情報編集</h2>
+<h2>会員情報編集<悪用厳禁></h2>
 
-<%= form_with model: @user, url: user_path, method: :patch do |f| %>
-
+<%= form_with model: @user, url: admin_user_path, method: :patch do |f| %>
+  <div>
+    <%= f.label:is_deleted, "有効", {value:false, style:"display:inline-box;"} %>
+    <%= f.radio_button:is_deleted, false %>
+    <%= f.label:is_deleted, "退会", {value:true, style:"display:inline-box;"} %>
+    <%= f.radio_button:is_deleted, true %>
+  </div>
   <div class="field">
     <label for="inputName">姓</label></br>
     <%= f.text_field :last_name, id:"inputName", placeholder:"姓"%></br>
@@ -46,5 +51,4 @@
   <div class="actions">
     <%= f.submit "更新する" %>
   </div>
-  <% end %>
-  <%= link_to "退会する", unsubscribe_path %>
+<% end %>
