--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,19 +1,23 @@
-<h1>投稿詳細</h1>
+<h1>投稿詳細＠非表示にできるか</h1>
 <h3>左３か４使ってテンプレ表示</h3>
 <div><%= @post.created_at.strftime('%Y/%m/%d  %H:%M') %></div>
-<div>
-  <% if @post.post_images.attached? %>
-    <% @post.post_images.each do |image| %>
-      <%= image_tag image.variant(resize_to_limit:[400,400]).processed %>
+<% if @post.user.is_deleted==false %>
+  <div>
+    <% if @post.post_images.attached? %>
+      <% @post.post_images.each do |image| %>
+        <%= image_tag image.variant(resize_to_limit:[400,400]).processed %>
+      <% end %>
+    <% else %>
+      <%= image_tag 'no_image.jpg' %>
     <% end %>
-  <% else %>
-    <%= image_tag 'no_image.jpg' %>
-  <% end %>
-</div>
-<div>
-  タイトル:<%= @post.title %>
-</div>
-<div>
-  本文:<%= @post.body %>
-</div>
-<div>～以下コメント欄～</div>
+  </div>
+  <div>
+    タイトル:<%= @post.title %>
+  </div>
+  <div>
+    本文:<%= @post.body %>
+  </div>
+  ～以下コメント欄～
+<% else %>
+  (´･ω･`)現在この投稿は管理者の判断で非表示にしています。(´･ω･`)
+<%end%>
