[Add]コメント機能をひとまず実装

--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -18,6 +18,22 @@
     本文:<%= @post.body %>
   </div>
   ～以下コメント欄～
+
+  <div>
+  <p>コメント件数：<%= @post.post_comments.count %></p>
+  <% @post.post_comments.each do |post_comment| %>
+    <%= image_tag post_comment.user.get_profile_image(50,50) %>
+    <%= post_comment.user.nickname %>
+    <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+  <% end %>
+</div>
+<div>
+  <%= form_with model: [@post, @post_comment] do |f| %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントはこちら" %>
+    <%= f.submit "送信する" %>
+  <% end %>
+</div>
+
 <% else %>
   (´･ω･`)現在この投稿は管理者の判断で非表示にしています。(´･ω･`)
 <%end%>
