--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Admin::Comments#index</h1>
-<p>Find me in app/views/admin/comments/index.html.erb</p>
+<h1>コメント一覧</h1>
+<% @posts.each do |post| %>
+  <% post.post_comments.each do |post_comment| %>
+    <%= post_comment.comment %>
+  <%end%>
+<% end %>
