--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -16,7 +16,7 @@
   <tr>
     <td>
       <%# if @user==current_user %>
-        <%= link_to"プロフィール編集",edit_admin_user_path(@user) %>
+        <%= link_to"プロフィール詳細・編集",edit_admin_user_path(@user) %>
       <%#end%>
     </td>
   </tr>
