--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,6 +1,6 @@
 <h1>投稿詳細＠非表示にできるか</h1>
 <h3>左３か４使ってテンプレ表示</h3>
-<div><%= @post.created_at.strftime('%Y/%m/%d  %H:%M') %></div>
+
 <%# if @post.user.is_deleted==false %>
   <div>
     <% if @post.post_images.attached? %>
@@ -11,12 +11,22 @@
       <%= image_tag 'no_image.jpg' %>
     <% end %>
   </div>
-  <div>
-    タイトル:<%= @post.title %>
-  </div>
-  <div>
-    本文:<%= @post.body %>
-  </div>
+  <p><%= @post.created_at.strftime('%Y/%m/%d  %H:%M') %></p>
+  <p>タイトル:<%= @post.title %></p>
+  本文:<%= @post.body %>
+  <% if @post.favorited_by?(current_user) %>
+    <p>
+      <%= link_to post_favorites_path(@post), method: :delete do %>
+        ♥<%= @post.favorites.count %> いいね
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to post_favorites_path(@post), method: :post do %>
+        ♡<%= @post.favorites.count %> いいね
+      <% end %>
+    </p>
+  <% end %>
   ～以下コメント欄～
 
 <table>
