--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -31,7 +31,13 @@
           <%= post.title %>
         <%end%>
       </td>
-      <td>♥いいね</td>
+      <td>
+        <% if post.favorited_by?(current_user) %>
+          ♥<%= post.favorites.count %> いいね
+        <% else %>
+          ♡<%= post.favorites.count %> いいね
+        <% end %>
+      </td>
       <td><%= post.created_at.strftime('%Y/%m/%d') %></td>
     </tr>
   </table>
