[Add]いいね一覧（簡易）を追加

--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -20,6 +20,9 @@
       <%end%>
     </td>
   </tr>
+  <tr>
+    <td><%= link_to "いいねした投稿", myfavorites_user_path(@user) %></td>
+  </tr>
 </table>
 ～以下投稿履歴～
 
