--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,45 +1,38 @@
 <h1>投稿一覧</h1>
-<h3>左３か４使ってテンプレ表示</h3>
-
-<table>
-  <tr>
-    <td>
-    </td>
-  </tr>
-   <tr>
-    <td>
-    </td>
-  </tr>
-</table>
+<h3>左３か４使って部分テンプレ表示</h3>
 
 <% @posts.each do |post| %>
-<table>
-  <tr>
-    <td>
-      【<%= post.genre.name %>】
-      <%= link_to post_path(post.id) do %>
-        <%= post.title %>
-      <% end %>
-    </td>
-    <td>投稿者：<%= post.user.nickname %></td>
-  </tr>
-  <tr>
-    <td><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %>
-      <% if post.favorited_by?(current_user) %>
-          ♥<%= post.favorites.count %> いいね
-      <% else %>
-          ♡<%= post.favorites.count %> いいね
-      <% end %>
-    </td>
-    <td></td>
-  </tr>
-  <%#= @genre.name %>
+  <table>
+    <tr>
+      <td>
+        【<%= post.genre.name %>】
+        <%= link_to post_path(post.id) do %>
+          <%= post.title %>
+        <% end %>
+      </td>
+      <td>投稿者：<%= post.user.nickname %></td>
+    </tr>
+    <tr>
+      <td><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %>
+        <% if post.favorited_by?(current_user) %>
+            ♥<%= post.favorites.count %> いいね
+        <% else %>
+            ♡<%= post.favorites.count %> いいね
+        <% end %>
+      </td>
+      <td>
+        <% post.tags.each do |tag| %>
+        <%= link_to "##{tag.tag_name}",posts_path(tag) %>
+        <%end%>
+      </td>
+    </tr>
+    <%#= @genre.name %>
 
-  <%# if post.post_images.attached? %>
-    <%# post.post_images.each do |image| %>
-      <%#= image_tag image.variant(resize: '100x100').processed %>
+    <%# if post.post_images.attached? %>
+      <%# post.post_images.each do |image| %>
+        <%#= image_tag image.variant(resize: '100x100').processed %>
+      <%# end %>
     <%# end %>
-  <%# end %>
-</table>
+  </table>
 
 <% end %>
