--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,27 +1,35 @@
 <h1>投稿フォーム</h1>
 <h3>左３か４使ってテンプレ表示</h3>
-<%= form_with model: @post do |f| %>
-<table>
-  <tr>
-    <td>ジャンル━━━━━━━</td>
-    <td>
-      <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), include_blank: "ジャンルを選択して下さい" %>
-    </td>
-  </tr>
-  <tr>
-    <td>タイトル━━━━━━━</td>
-    <td><%= f.text_field:title %></td>
-  </tr>
-  <tr>
-    <td>本文</td>
-    <td><%= f.text_area:body %></td>
-  </tr>
-  <tr>
-    <td>画像</td>
-    <td><%= f.file_field:post_images, accept:"image/*", multiple: true %></td>
-  </tr>
-  <tr>
-    <td><%= f.submit '投稿' %></td>
-  </tr>
-</table>
+<%= @tag_lists.each do |list| %>
+<%= link_to list.tag_name, posts_path(tag_id: list.id)%>
+<% end %></br>
+ここまでテンプレ</br>
+<%= form_with(model:[@tag,@post], local:true) do |f| %>
+  <table>
+    <tr>
+      <td>ジャンル━━━━━━━</td>
+      <td>
+        <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), include_blank: "ジャンルを選択して下さい" %>
+      </td>
+    </tr>
+    <tr>
+      <td>タイトル━━━━━━━</td>
+      <td><%= f.text_field:title %></td>
+    </tr>
+    <tr>
+      <td>本文</td>
+      <td><%= f.text_area:body %></td>
+    </tr>
+    <tr>
+      <td>画像</td>
+      <td><%= f.file_field:post_images, accept:"image/*", multiple: true %></td>
+    </tr>
+    <tr>
+      <td>タグ</td>
+      <td><%= f.text_field:tag_name, placeholder: "タグ時はｽﾍﾟｰｽで区切ってね" %></td>
+    </tr>
+    <tr>
+      <td><%= f.submit '投稿' %></td>
+    </tr>
+  </table>
 <% end %>
