[Add]管理者側に投稿削除ボタンを設置

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <td>
-      <%= image_tag post.user.get_profile_image(80,80) %>
+      <%= image_tag post.user.get_profile_image(50,50) %>
     </td>
     <td>
       【<%= post.genre.name %>】
@@ -19,7 +19,7 @@
     </td>
     <td>【本文】<%= post.body %></td>
     <td>（<%= post.created_at.strftime('%Y/%m/%d  %H:%M') %>）</td>
-    <td></td>
+    <td><%= link_to "削除", admin_post_path(post.id), method: :delete %></td>
   </tr>
   <tr>
     <td></td>
