--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,15 @@
 <h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
+<p>
+  やあ （´・ω・｀)</br>
+ようこそ、バーボンハウスへ。</br>
+このテキーラはサービスだから、まず飲んで落ち着いて欲しい。</br>
+
+うん、「また」なんだ。済まない。</br>
+仏の顔もって言うしね、謝って許してもらおうとも思っていない。</br>
+
+でも、このurlを見たとき、君は、きっと言葉では言い表せない「ときめき」みたいなものを感じてくれたと思う。</br>
+殺伐とした世の中で、そういう気持ちを忘れないで欲しい</br>
+そう思って、このページを作ったんだ。</br>
+
+じゃあ、注文を聞こうか。</br>
+</p>
