--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,6 +1,14 @@
 <h1>投稿一覧</h1>
 <h3>左３か４使って部分テンプレ表示</h3>
+<%= form_with url: search_posts_path, method: :get, local: true do |f| %>
+  <%= f.text_field :keyword, value: @keyword %>
+  <%= f.submit "検索" %>
+<% end %>
 
+タグ：<% @tag_lists.each do |tag| %>
+  <%= link_to tag.tag_name, posts_path(tag_id: tag.id)%>
+<% end %></br>
+ここまでテンプレ</br>
 <% @posts.each do |post| %>
   <table>
     <tr>
@@ -15,14 +23,15 @@
     <tr>
       <td><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %>
         <% if post.favorited_by?(current_user) %>
-            ♥<%= post.favorites.count %> いいね
+            ♥<%= post.favorites.count %>
         <% else %>
-            ♡<%= post.favorites.count %> いいね
+            ♡<%= post.favorites.count %>
         <% end %>
       </td>
-      <td>
+      <td><%#= link_to list.tag_name, posts_path(tag_id: list.id)%>
         <% post.tags.each do |tag| %>
-        <%= link_to "##{tag.tag_name}",posts_path(tag) %>
+
+          <%=link_to "##{tag.tag_name}",posts_path(tag_id: tag.id) %>
         <%end%>
       </td>
     </tr>
