--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         (´･ω･`)管理者画面
         <%= link_to "投稿一覧", admin_root_path %>
         <%= link_to "会員一覧", admin_users_path %>
-        <%#= link_to "●●一覧", admin_●●_path %>
+        <%#= link_to "コメント一覧", admin_●●_path %>
         <%= link_to "ジャンル一覧", admin_genres_path %>
         <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
       <% else %>
