--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -40,11 +40,11 @@
     <%= image_tag post_comment.user.get_profile_image(50,50) %>
     <%= post_comment.user.nickname %>
     <%= post_comment.created_at.strftime('%Y/%m/%d') %>
-    <% if @post_comment.is_deleted==false %>
+    <% if post_comment.is_deleted==false %>
       <%= post_comment.comment %>
     <% else %>
       ≪このコメントは削除されました≫
-    <%end%>
+    <% end %>
     </td>
   </tr>
   <% end %>
