--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
         <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
       <% else %>
         <%= link_to "ログイン", new_user_session_path,class: 'nav-link text-black' %>
+        <%= link_to 'ゲストログイン（閲覧用）', guests_guest_sign_in_path, method: :post %>
       <% end %>
 
     </header>
