--- a/app/views/public/users/_list.html.erb
+++ b/app/views/public/users/_list.html.erb
@@ -1,5 +1,10 @@
-<%#= link_to image_tag( post.image.variant(resize: '100x100') ), post_path(post.id) %>
-<%= link_to post.user.name, user_path(post.user.id) %>
-<i class="fa fa-heart unlike-btn"></i>
-<%= post.favorites.length %>
-<%= link_to post.title, post_path(post.id) %>
+<%= form_with url: search_posts_path, method: :get, local: true do |f| %>
+  <%= f.text_field :keyword, value: keyword %>
+  <%= f.submit "検索" %>
+<% end %>
+
+タグ：<% tag_lists.each do |tag| %>
+  <%= link_to posts_path(tag_id: tag.id) do %>
+    #<%= tag.tag_name %>
+  <% end %>
+<% end %>
