--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,4 +1,5 @@
-<h2>会員情報編集</h2>
+<h1>プロフィール編集</h1>
+<%= render 'list',keyword: @keyword, tag_lists: @tag_lists %>
 
 <%= form_with model: @user, url: user_path, method: :patch do |f| %>
 
