[Update]非公開・下書き機能をひとまず実装

--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -29,7 +29,7 @@
     </tr>
     <tr>
 
-      <td><%= f.select:post_status,Post.post_statuses_i18n.invert,disabled: "draft" %></td>
+      <td><%= f.select:post_status,Post.post_statuses_i18n.invert %></td>
     </tr>
     <tr>
       <td><%= f.submit '投稿' %></td>
