--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -8,7 +8,7 @@
     <tr>
       <td>ジャンル━━━━━━━</td>
       <td>
-        <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), include_blank: "ジャンルを選択して下さい" %>
+        <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name) %>
       </td>
     </tr>
     <tr>
