--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,30 +1,37 @@
-<h1>トップ画面（３件まで新着表示中）</h1>
-<h3>左３か４使ってテンプレ表示</h3>
-
-<% @posts.each do |post| %>
-<table>
-  <tr>
-    <td>
-      【<%= post.genre.name %>】
-      <%= link_to post_path(post.id) do %>
-        <%= post.title %>
+<h1>トップ画面（３件まで）</h1>
+<div class = "container">
+  <div class = "row">
+    <div class = "col-lg-3">
+      <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %>
+    </div>
+    <div class = "col-lg-9">
+      <% @posts.each do |post| %>
+        <table>
+          <tr>
+            <td>
+              【<%= post.genre.name %>】
+              <%= link_to post_path(post.id) do %>
+                <%= post.title %>
+              <% end %>
+            </td>
+            <td>投稿者：<%= post.user.nickname %></td>
+          </tr>
+          <tr>
+            <td><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <%#= @genre.name %>
+          <%# if post.post_images.attached? %>
+            <%# post.post_images.each do |image| %>
+              <%#= image_tag image.variant(resize: '100x100').processed %>
+            <%# end %>
+          <%# end %>
+        </table>
       <% end %>
-    </td>
-    <td>投稿者：<%= post.user.nickname %></td>
-  </tr>
-  <tr>
-    <td><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <%#= @genre.name %>
+      <%= link_to "全ての投稿を見る≫", posts_path %>
+    </div>
+  </div>
+</div>
 
-  <%# if post.post_images.attached? %>
-    <%# post.post_images.each do |image| %>
-      <%#= image_tag image.variant(resize: '100x100').processed %>
-    <%# end %>
-  <%# end %>
-</table>
 
-<% end %>
-<%= link_to "全ての投稿を見る≫", posts_path %>
