--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -7,40 +7,46 @@
   </ul>
 <% end %>
 <h1>投稿フォーム</h1>
-
-<%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %></br>
-
-ここまでテンプレ</br>
-<%= form_with(model:[@tag,@post], local:true) do |f| %>
-  <table>
-    <tr>
-      <td>ジャンル━━━━━━━</td>
-      <td>
-        <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), include_blank: "ジャンルを選択して下さい" %>
-      </td>
-    </tr>
-    <tr>
-      <td>タイトル━━━━━━━</td>
-      <td><%= f.text_field:title %></td>
-    </tr>
-    <tr>
-      <td>本文</td>
-      <td><%= f.text_area:body %></td>
-    </tr>
-    <tr>
-      <td>画像</td>
-      <td><%= f.file_field:post_images, accept:"image/*", multiple: true %></td>
-    </tr>
-    <tr>
-      <td>タグ</td>
-      <td><%= f.text_field:tag_name, placeholder: "タグはｽﾍﾟｰｽで区切ってね" %></td>
-    </tr>
-    <tr>
-
-      <td><%= f.select:post_status,Post.post_statuses_i18n.invert %></td>
-    </tr>
-    <tr>
-      <td><%= f.submit '投稿' %></td>
-    </tr>
-  </table>
-<% end %>
+<div class = "container">
+  <div class = "row">
+    <div class = "col-lg-3">
+      <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %></br>
+    </div>
+    <div class = "col-lg-9">
+      <%= form_with(model:[@tag,@post], local:true) do |f| %>
+        <table>
+          <tr>
+            <td>ジャンル━━━━━━━</td>
+            <td>
+              <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), include_blank: "ジャンルを選択して下さい" %>
+            </td>
+          </tr>
+          <tr>
+            <td>タイトル━━━━━━━</td>
+            <td><%= f.text_field:title %></td>
+          </tr>
+          <tr>
+            <td>本文</td>
+            <td><%= f.text_area:body %></td>
+          </tr>
+          <tr>
+            <td>画像</td>
+            <td><%= f.file_field:post_images, accept:"image/*", multiple: true %></td>
+          </tr>
+          <tr>
+            <td>タグ</td>
+            <td><%= f.text_field:tag_name, placeholder: "タグはｽﾍﾟｰｽで区切ってね" %></td>
+          </tr>
+          <tr>
+            <td>記事の公開</td>
+            <td><%= f.select:post_status,Post.post_statuses_i18n.invert %></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td><%= f.submit '投稿' %></td>
+          </tr>
+        </table>
+      <% end %>
+    </div>
+  </div>
+</div>
