--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,72 +1,78 @@
-<h1>投稿詳細＠非表示にできるか</h1>
-<%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %></br>
-
-<% if @post.post_status != "publish" && @post.user != current_user %>
- この記事は公開されていません(´･ω･`)
-<% else %>
-  <div>
-    <% if @post.post_images.attached? %>
-      <% @post.post_images.each do |image| %>
-        <%= image_tag image.variant(resize_to_limit:[300,300]).processed %>
-      <% end %>
-    <% else %>
-      <%= image_tag 'no_image.jpg' %>
-    <% end %>
-  </div>
-  <p>
-    投稿者:<%= @post.user.nickname %>
-    <%= @post.created_at.strftime('%Y/%m/%d  %H:%M') %>
-  </p>
-  <p>タイトル:【<%= @post.genre.name %>】<%= @post.title %></p>
-  本文:<%= @post.body %>
-  <% if @post.favorited_by?(current_user) %>
-    <p>
-      <%= link_to post_favorites_path(@post), method: :delete do %>
-        ♥<%= @post.favorites.count %> いいね
-      <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to post_favorites_path(@post), method: :post do %>
-        ♡<%= @post.favorites.count %> いいね
-      <% end %>
-    </p>
-  <% end %>
-  <% if @post.user==current_user# && @post.post_status != "publish" %>
-    <%= link_to "記事編集",edit_post_path(@post.id) %>
-  <% end %></br>
-  ～以下コメント欄～
-  <table>
-    <tr>
-      <td>コメント件数：<%= @post.post_comments.count %></td>
-    </tr>
-    <% @post.post_comments.each do |post_comment| %>
-    <tr>
-      <td>
-      <%= image_tag post_comment.user.get_profile_image(50,50) %>
-      <%= post_comment.user.nickname %>
-      <%= post_comment.created_at.strftime('%Y/%m/%d') %>
-      <% if post_comment.is_deleted==false %>
-        <%= post_comment.comment %>
+<h1>投稿詳細</h1>
+<div class = "container">
+  <div class = "row">
+    <div class = "col-lg-3">
+      <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %></br>
+    </div>
+    <div class = "col-lg-9">
+      <% if @post.post_status != "publish" && @post.user != current_user %>
+       この記事は公開されていません(´･ω･`)
       <% else %>
-        ≪このコメントは削除されました≫
+        <div>
+          <% if @post.post_images.attached? %>
+            <% @post.post_images.each do |image| %>
+              <%= image_tag image.variant(resize_to_limit:[300,300]).processed %>
+            <% end %>
+          <% else %>
+            <%= image_tag 'no_image.jpg' %>
+          <% end %>
+        </div>
+        <p>
+          投稿者:<%= @post.user.nickname %>
+          <%= @post.created_at.strftime('%Y/%m/%d  %H:%M') %>
+        </p>
+        <p>タイトル:【<%= @post.genre.name %>】<%= @post.title %></p>
+        本文:<%= @post.body %>
+        <% if @post.favorited_by?(current_user) %>
+          <p>
+            <%= link_to post_favorites_path(@post), method: :delete do %>
+              ♥<%= @post.favorites.count %> いいね
+            <% end %>
+          </p>
+          <% else %>
+          <p>
+            <%= link_to post_favorites_path(@post), method: :post do %>
+              ♡<%= @post.favorites.count %> いいね
+            <% end %>
+          </p>
+        <% end %>
+        <% if @post.user==current_user# && @post.post_status != "publish" %>
+          <%= link_to "記事編集",edit_post_path(@post.id) %>
+        <% end %></br>
+        ～以下コメント欄～
+        <table>
+          <tr>
+            <td>コメント件数：<%= @post.post_comments.count %></td>
+          </tr>
+          <% @post.post_comments.each do |post_comment| %>
+          <tr>
+            <td>
+            <%= image_tag post_comment.user.get_profile_image(50,50) %>
+            <%= post_comment.user.nickname %>
+            <%= post_comment.created_at.strftime('%Y/%m/%d') %>
+            <% if post_comment.is_deleted==false %>
+              <%= post_comment.comment %>
+            <% else %>
+              ≪このコメントは削除されました≫
+            <% end %>
+            </td>
+          </tr>
+          <% end %>
+        </table>
+        <div>
+          <%= form_with(model: [@post, @post_comment]) do |f| %>
+            <%= f.text_area :comment, rows: '5', placeholder: "コメントはこちら" %>
+            <%= f.submit "送信する" %>
+          <% end %>
+        </div>
+        <div>
+          タグ：
+            <% @post.tags.each do |tag| %>
+              <%=link_to "##{tag.tag_name}",posts_path(tag_id: tag.id) %>
+            <%end%>
+        </div>
+      <%# else %>
       <% end %>
-      </td>
-    </tr>
-    <% end %>
-  </table>
-  <div>
-    <%= form_with(model: [@post, @post_comment]) do |f| %>
-      <%= f.text_area :comment, rows: '5', placeholder: "コメントはこちら" %>
-      <%= f.submit "送信する" %>
-    <% end %>
+    </div>
   </div>
-  <div>
-    タグ：
-      <% @post.tags.each do |tag| %>
-        <%=link_to "##{tag.tag_name}",posts_path(tag_id: tag.id) %>
-      <%end%>
-  </div>
-<%# else %>
-
-<%end%>
+</div>
