--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,9 +1,9 @@
-<h1>管理者トップ画面（投稿一覧を兼ねるかは未定）</h1>
+<h1>管理者トップ画面（投稿一覧）</h1>
 <% @posts.each do |post| %>
 <table>
   <tr>
     <td>
-      <%= image_tag post.user.get_profile_image(50,50) %>
+      <%= image_tag post.user.get_profile_image(50,50), class:"mt-3 rounded-circle"; %>
     </td>
     <td>
       【<%= post.genre.name %>】
