--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,35 +1,63 @@
-<h1>トップ画面（７件まで）</h1>
+<h1>トップ画面</h1>
 <div class = "container-fluid">
-  <div class = "row">
+  <div class = "row m-3">
     <div class = "col-md-3">
       <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %>
     </div>
     <div class = "col-md-9">
+      <div class="card-group">
+
       <% @posts.each do |post| %>
-        <table>
-          <tr>
-            <td>
-              【<%= post.genre.name %>】
+
+      <div class="mt-4 shadow-lg">
+    <%= image_tag post.get_photo(200,200), class:"card-img-top"; %>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-3">
+        <%= image_tag post.user.get_profile_image(50,50), class:"mt-3 rounded-circle"; %>
+
+      </div>
+      <div class="col-9">
+        <p class="card-title">
+          <%= link_to(post_path(post.id), class:"text-dark") do %>
+            <strong><span>
               <%= link_to post_path(post.id) do %>
                 <%= post.title %>
               <% end %>
+              <%#= post.user.nickname %></span>
+            </strong>
+          <% end %>
+        </p>
+        <p class="card-text">
+          <%#S= post.genre.name %>
+        </p>
+        <span><i class="fas fa-user"></i> By <%= post.user.nickname %> ｜ </span>
+        <span><%= link_to "#{post.post_comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
+        <span><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %></span>
+      </div>
+    </div>
+  </div>
+</div>
+
+        <table>
+          <tr>
+            <td>
+              <%#= post.genre.name %>
+              <%#= link_to post_path(post.id) do %>
+                <%#= post.title %>
+              <%# end %>
             </td>
-            <td>投稿者：<%= post.user.nickname %></td>
+            <td><%#= post.user.nickname %></td>
           </tr>
           <tr>
-            <td><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %></td>
-            <td></td>
-            <td></td>
+            <td><%#= post.created_at.strftime('%Y/%m/%d  %H:%M') %></td>
           </tr>
-          <%#= @genre.name %>
-          <%# if post.post_images.attached? %>
-            <%# post.post_images.each do |image| %>
-              <%#= image_tag image.variant(resize: '100x100').processed %>
-            <%# end %>
-          <%# end %>
         </table>
       <% end %>
-      <%= link_to "全ての投稿を見る≫", posts_path %>
+      </div>
+      <div class="row justify-content-end">
+        <%= link_to "全ての投稿を見る≫", posts_path %>
+      </div>
     </div>
   </div>
 </div>
