--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,51 +1,57 @@
 <h1>プロフィール編集</h1>
-<%= render 'list',keyword: @keyword, tag_lists: @tag_lists %>
+<div class = "container-fluid">
+  <div class = "row">
+    <div class = "col-md-3">
+      <%= render 'list',keyword: @keyword, tag_lists: @tag_lists %>
+    </div>
 
-<%= form_with model: @user, url: user_path, method: :patch do |f| %>
-
-  <div class="field">
-    <label for="inputName">姓</label></br>
-    <%= f.text_field :last_name, id:"inputName", placeholder:"姓"%></br>
+    <div class = "col-md-9">
+      <%= form_with model: @user, url: user_path, method: :patch do |f| %>
+      <table>
+        <tr>
+          <td><%= f.label :姓（LastName） %></td>
+          <td><%= f.text_field :last_name,autofocus: true %></td>
+        </tr>
+        <tr>
+          <td><%= f.label :名（FirstName） %></td>
+          <td><%= f.text_field :first_name %></td>
+        </tr>
+        <tr>
+          <td><%= f.label :ニックネーム（Nickname） %></td>
+          <td><%= f.text_field :nickname %></td>
+        </tr>
+        <tr>
+          <td><%= f.label :自己紹介（Introduction） %></td>
+          <td><%= f.text_area :introduction,size: "50x3" %></td>
+        </tr>
+        <tr>
+          <td><%= f.label :プロフィール画像（FirstName） %></td>
+          <td><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %></td>
+        </tr>
+        <tr>
+          <td><%= f.label :メールアドレス（email） %></td>
+          <td><%= f.email_field :email, autofocus: true, autocomplete: "email",size: 50 %></td>
+        </tr>
+        <tr>
+          <td><%= f.label :パスワード（６文字以上） %></td>
+          <td><%= f.password_field :password, autocomplete: "new-password" %></td>
+        </tr>
+        <tr>
+          <td><%= f.label :パスワード（確認用） %></td>
+          <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <%= f.submit "更新する",class:"btn btn-success" %>
+          </td>
+          <td>
+            <%= link_to "退会する", unsubscribe_path,class:"btn btn-danger" %>
+          </td>
+        </tr>
+      </table>
+      <%end%>
+    </div>
   </div>
+</div>
 
-  <div class="field">
-    <label for="inputName">名</label></br>
-    <%= f.text_field :first_name, id:"inputName", placeholder:"名"%></br>
-  </div>
-
-  <div class="field">
-    <label for="inputName">ニックネーム</label></br>
-    <%= f.text_field :nickname, id:"inputName", placeholder:"ニックネーム" %></br>
-  </div>
-
-  <div class="field">
-    <label for="inputName">自己紹介</label></br>
-    <%= f.text_field :introduction, id:"inputName", placeholder:"自己紹介"%></br>
-  </div>
-
-  <label for="inputImage">プロフィール画像</label></br>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>  </br>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "更新する" %>
-  </div>
-  <% end %>
-  <%= link_to "退会する", unsubscribe_path %>
